<resources>
    <string name="app_name">Food Order</string>
    <string name="app_bar_name_detail">Detail</string>
    <string name="app_bar_name_favorite_food">Favorite Food</string>
    <string name="app_bar_name_my_cart">My Cart</string>
    <string name="app_bar_name_order_history">Order History</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="fullName">Full Name</string>
    <string name="usernameHint">Input Username</string>
    <string name="password">Password</string>
    <string name="passwordHint">Input Password</string>
    <string name="confirmationPassword">Confirmation Password</string>
    <string name="hint">Input %1$s</string>
    <string name="foodList">Food List</string>
    <string name="search">Search</string>
    <string name="entries">Entries :</string>
    <string name="sortBy">Sort By</string>
    <string name="ingredients">Ingredients</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addToCart">Add to Cart</string>
    <string name="filter">Filter</string>
    <string name="sign_out">Sign Out</string>
    <string name="usernameTag">\@%1$s</string>
    <string name="total">Total : %1$s x %2$s</string>
    <string name="total_price">Total Price : %1$s</string>
    <string name="total_item">Total Item : %1$s</string>
    <string name="total_order">Total Order : %1$s</string>
    <string name="order_id">ORD%1$s</string>
    <string name="show_less">Show Less</string>
    <string name="show_more">Show More</string>
    <string name="cancel">Cancel</string>
    <string name="category">Category</string>
    <string name="default_currency">Rp0,00</string>
    <string name="checkout">Checkout</string>
    <string name="select_all">Select All</string>
    <string name="back">Back</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="back_to_login_page">Back to Login Page</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="total_order_title">Total Order :</string>
</resources>