<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="@color/bg"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/app_name"/>
    <ImageView
        android:layout_marginTop="2dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_logo"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:paddingVertical="10dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/login"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:paddingHorizontal="50dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:labelFor="@+id/inputUsername"/>
                <EditText
                    android:id="@+id/inputUsername"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="text"
                    android:autofillHints="username"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/password"
                    android:labelFor="@+id/inputPassword"/>
                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="textPassword"
                    android:autofillHints="password"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/green"
                    app:cornerRadius="10dp"
                    app:elevation="0dp"
                    android:text="@string/login"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/belum_punya_akun"/>
                    <TextView
                        android:id="@+id/toRegister"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/green"
                        android:text="@string/daftar_disini"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="5dp"
                        android:textColor="@color/green"
                        android:text="@string/about"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="5dp"
                        android:textColor="@color/green"
                        android:text="@string/contact"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</LinearLayout>