<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_vertical"
    android:paddingVertical="10dp">
<com.google.android.material.card.MaterialCardView
    android:layout_height="80dp"
    android:layout_width="80dp"
    android:layout_gravity="center_vertical"
    app:cardCornerRadius="10dp" >
    <ImageView
        android:id="@+id/foodImage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/sample_image"/>
</com.google.android.material.card.MaterialCardView>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="10dp">
    <TextView
        android:id="@+id/foodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/app_name"/>
    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"/>
    <TextView
        android:id="@id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price"/>
</LinearLayout>
</LinearLayout>