<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="@color/bg"
    tools:context=".RegisterActivity">

    <include layout="@layout/header_auth"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:paddingVertical="10dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/register"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:paddingHorizontal="50dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:labelFor="@+id/inputUsername"/>
                <EditText
                    android:id="@+id/inputUsername"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="text"
                    android:autofillHints="username"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/fullName"
                    android:labelFor="@+id/inputFullName"/>
                <EditText
                    android:id="@+id/inputFullName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="textPersonName"
                    android:autofillHints="name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/password"
                    android:labelFor="@+id/inputPassword"/>
                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="textPassword"
                    android:hint="@string/passwordHint"
                    android:autofillHints="password"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/confirmationPassword"
                    android:labelFor="@+id/inputConfirmationPassword"/>
                <EditText
                    android:id="@+id/inputConfirmationPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="textPassword"
                    android:autofillHints="password"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/green"
                    app:cornerRadius="10dp"
                    app:elevation="0dp"
                    android:text="@string/register"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    >
                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="?attr/actionModeCloseDrawable" />
                    <TextView
                        android:id="@+id/toLogin"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/back_to_login_page"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>