<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="2dp"
    android:layout_marginVertical="5dp"
   >

    <com.google.android.material.card.MaterialCardView
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/foodImage"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sample_image"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-45dp"
                    android:layout_marginRight="-5dp"
                    android:layout_gravity="end">
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/starredButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/ic_star"
                        android:buttonTint="@color/green"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/productName"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="5dp"
                android:paddingHorizontal="10dp">
                <TextView
                    android:id="@+id/categoryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    android:text="@string/category"/>
                <TextView
                    android:id="@+id/foodName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="15sp"
                    android:text="@string/app_name"/>
                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/default_currency"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addToCartButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/green"
                    app:iconSize="15dp"
                    app:icon="@drawable/ic_cart"
                    android:layout_gravity="center_horizontal"
                    android:drawableTint="@color/white"
                    android:textAllCaps="false"
                    android:text="@string/addToCart"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>