<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context=".fragment.FoodlistFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/foodList"
                android:textSize="25sp"
                android:textStyle="bold" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:columnCount="2"
                android:useDefaultMargins="true">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/searchBarLayout"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_columnWeight="2"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:hint="@string/search"
                    android:orientation="horizontal"
                    app:startIconDrawable="@drawable/ic_search"
                    app:startIconTint="@color/grey">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/searchBar"
                        style="@style/searchBarLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/filterButton"
                    style="@style/filterLayout"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center_vertical"
                    android:drawableEnd="@drawable/ic_filter"
                    android:gravity="center_vertical"
                    android:paddingVertical="15dp"
                    android:text="@string/filter"
                    android:textAllCaps="false"
                    android:textColor="@color/grey"
                    app:cornerRadius="10dp"
                    app:strokeColor="@android:color/darker_gray"
                    app:strokeWidth="1dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sortBy"
                    style="@style/sortByLayout"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="-1dp"
                    android:gravity="center_vertical"
                    android:hint="@string/sortBy">

                    <AutoCompleteTextView
                        android:id="@+id/sortByList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>
            </GridLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/foodList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:overScrollMode="never" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/entries" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/entriesOption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/pagination"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>